force-app/main/default/objects/numm__Recurrence__c/numm__Recurrence__c.object-meta.xml
<CustomObject>
    <label>Récurrence</label>
    <nameField>
        <displayFormat>Rec-{00000}</displayFormat>
        <label>Récurrence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Récurrences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>