force-app/main/default/objects/numm__Recurrence__c/fields/numm__Date_Last__c.field-meta.xml
<CustomField>
    <fullName>numm__Date_Last__c</fullName>
    <label>Date dernière saisie</label>
    <required>true</required>
    <type>Date</type>
</CustomField>