force-app/main/default/objects/numm__Recurrence__c/fields/numm__DateEnd__c.field-meta.xml
<CustomField>
    <fullName>numm__DateEnd__c</fullName>
    <label>Date de fin</label>
    <type>Date</type>
</CustomField>