force-app/main/default/objects/numm__Recurrence__c/fields/numm__IsClose__c.field-meta.xml
<CustomField>
    <fullName>numm__IsClose__c</fullName>
    <formula>numm__DateEnd__c &lt; numm__Date_Next__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsClose</label>
    <type>Checkbox</type>
</CustomField>