force-app/main/default/objects/numm__Recurrence__c/fields/numm__Periodicite__c.field-meta.xml
<CustomField>
    <fullName>numm__Periodicite__c</fullName>
    <label>Periodicité</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mensuelle</fullName>
                <default>true</default>
                <label>Mensuelle</label>
            </value>
            <value>
                <fullName>Trimestrielle</fullName>
            </value>
            <value>
                <fullName>Annuelle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>