force-app/main/default/objects/numm__Recurrence__c/fields/numm__Piece__c.field-meta.xml
<CustomField>
    <fullName>numm__Piece__c</fullName>
    <label>Pièce</label>
    <referenceTo>numm__HeaderVoucher__c</referenceTo>
    <relationshipLabel>Récurrences</relationshipLabel>
    <relationshipName>Recurrences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>