force-app/main/default/objects/numm__Recurrence__c/fields/numm__UniquePiece__c.field-meta.xml
<CustomField>
    <fullName>numm__UniquePiece__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Vérifie que l&#39;on a bien qu&#39;une seule récurrence pour la pièce</description>
    <label>UniquePiece</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>